# OpenDevin

./: AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
enterprise/: Dockerfile  pyproject.toml  saas_server.py
enterprise/dev_config/python/: .pre-commit-config.yaml
enterprise/integrations/: manager.py  models.py  resolver_context.py  store_repo_utils.py  stripe_service.py  types.py  utils.py  v1_utils.py
enterprise/integrations/azure_devops/: azure_devops_manager.py  azure_devops_service.py  azure_devops_v1_callback_processor.py  azure_devops_view.py
enterprise/integrations/bitbucket/: bitbucket_manager.py  bitbucket_service.py  bitbucket_v1_callback_processor.py  bitbucket_view.py
enterprise/integrations/bitbucket_data_center/: bitbucket_dc_manager.py  bitbucket_dc_service.py  bitbucket_dc_service_account.py  bitbucket_dc_v1_callback_processor.py  bitbucket_dc_view.py
enterprise/integrations/github/: data_collector.py  github_manager.py  github_service.py  github_v1_callback_processor.py  github_view.py
enterprise/integrations/gitlab/: gitlab_manager.py  gitlab_service.py  gitlab_v1_callback_processor.py  gitlab_view.py
enterprise/integrations/jira/: jira_manager.py  jira_payload.py  jira_v1_callback_processor.py  jira_view.py
enterprise/integrations/jira_dc/: jira_dc_conversation_secret_enricher.py  jira_dc_manager.py  jira_dc_user_token.py  jira_dc_v1_callback_processor.py  jira_dc_view.py
enterprise/integrations/linear/: linear_manager.py  linear_view.py
enterprise/integrations/slack/: slack_attachments.py  slack_errors.py  slack_manager.py  slack_types.py  slack_v1_callback_processor.py  slack_view.py
enterprise/migrations/: env.py
enterprise/migrations/versions/: 103_add_mcp_config_to_org_member.py  108_add_agent_settings_to_enterprise_settings.py  117_add_event_callback_composite_index.py  120_add_max_concurrent_sandboxes.py  121_add_is_paused_to_v1_remote_sandbox.py  122_add_oauth_tokens_to_jira_dc_users.py  122_drop_is_paused_from_v1_remote_sandbox.py  123_drop_is_paused_from_v1_remote_sandbox.py  124_remove_max_concurrent_sandboxes.py  125_add_git_full_clone_setting.py  126_add_default_sandbox_spec_id.py  127_add_execution_status_to_conversation_metadata.py  128_add_not_before_to_api_keys.py
enterprise/scripts/: seed_conversation_data.py  setup_and_seed.py  standalone_server.py
enterprise/server/: clustered_conversation_manager.py  config.py  constants.py  email_validation.py  middleware.py  rate_limit.py  saas_nested_conversation_manager.py
enterprise/server/auth/: authorization.py  constants.py  github_utils.py  gitlab_sync.py  org_context.py  saas_user_auth.py  token_manager.py
enterprise/server/conversation_callback_processor/: gitlab_callback_processor.py  slack_callback_processor.py
enterprise/server/models/: user_models.py
enterprise/server/routes/: api_keys.py  auth.py  billing.py  bitbucket_dc_proxy.py  email.py  event_webhook.py  github_proxy.py  mcp_patch.py  oauth_device.py  onboarding.py  org_invitations.py  org_models.py  org_profiles.py  orgs.py  readiness.py  user.py  user_app_settings_models.py  user_provisioning.py  users_v1.py
enterprise/server/routes/integration/: azure_devops.py  bitbucket.py  bitbucket_dc.py  github.py  gitlab.py  jira.py  jira_dc.py  slack.py
enterprise/server/services/: automation_event_service.py  email_service.py  org_app_settings_service.py  org_conversation_service.py  org_invitation_service.py  org_llm_settings_service.py  org_member_service.py
enterprise/server/sharing/: shared_conversation_models.py  shared_event_router.py  sql_shared_conversation_info_service.py
enterprise/server/utils/: conversation_callback_utils.py  rate_limit_utils.py  saas_app_conversation_info_injector.py
enterprise/server/verified_models/: litellm_proxy_model_router.py  verified_model_router.py  verified_model_service.py
enterprise/storage/: api_key.py  api_key_store.py  auth_token_store.py  bitbucket_dc_webhook.py  bitbucket_dc_webhook_store.py  default_org_service.py  encrypt_utils.py  gitlab_webhook_store.py  jira_dc_integration_store.py  lite_llm_manager.py  maintenance_task.py  offline_token_store.py  openhands_pr_store.py  org.py  org_app_settings_store.py  org_invitation_store.py  org_llm_settings_store.py  org_member.py  org_member_store.py  org_service.py  org_store.py  proactive_conversation_store.py  redis.py  saas_conversation_store.py  saas_secrets_store.py  saas_settings_store.py  slack_team_store.py  stored_conversation_metadata_saas.py  user.py  user_settings.py  user_store.py
enterprise/sync/: clean_proactive_convo_table.py  install_gitlab_webhooks.py  resend_keycloak.py
enterprise/tests/unit/: test_api_key_aware_cors_middleware.py  test_api_key_store.py  test_auth_middleware.py  test_auth_routes.py  test_authorization.py  test_billing.py  test_default_org_service.py  test_email_validation_dependency.py  test_github_view.py  test_gitlab_callback_processor.py  test_gitlab_view.py  test_lite_llm_manager.py  test_logger.py  test_maintenance_task_runner_standalone.py  test_migration_108_add_agent_settings.py  test_org_invitation_service.py  test_org_invitations_router.py  test_org_member_store.py  test_org_models_concurrency_limits.py  test_org_profiles.py  test_org_service.py  test_org_store.py  test_recaptcha_service.py  test_saas_conversation_store.py  test_saas_secrets_store.py  test_saas_settings_store.py  test_saas_user_auth.py  test_slack_callback_processor.py  test_slack_integration.py  test_stripe_service_db.py  test_token_manager.py  test_token_manager_extended.py  test_user_git_organizations.py  test_user_route_fallback.py  test_user_store.py  test_utils.py
enterprise/tests/unit/integrations/: test_resolver_context.py
enterprise/tests/unit/routes/: test_user_provisioning.py
enterprise/tests/unit/server/: test_constants.py  test_rate_limit_utils.py
enterprise/tests/unit/storage/: test_bitbucket_dc_webhook_store.py  test_jira_dc_active_link_constraint.py  test_org_llm_settings_store.py  test_saas_sql_app_conversation_info_service.py
(+539 files in other folders)
