[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "enterprise_server"
version = "0.0.1"
description = "Deploy OpenHands"
authors = [ "OpenHands" ]
license = "POLYFORM"
readme = "README.md"
repository = "https://github.com/OpenHands/OpenHands"
packages = [
  { include = "server" },
  { include = "storage" },
  { include = "sync" },
  { include = "integrations" },
]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
openhands-ai = { path = "../", develop = true }
authlib = "1.6.12"
gspread = "6.2.1"
alembic = "1.18.4"
cloud-sql-python-connector = "1.20.1"
psycopg2-binary = "2.9.11"
pg8000 = "1.31.5"
stripe = "11.6.0"
python-json-logger = "3.3.0"
python-keycloak = "5.12.0"
asyncpg = "0.30.0"
sqlalchemy = { extras = [ "asyncio" ], version = "2.0.48" }
resend = "2.27.0"
tenacity = "9.1.4"
slack-sdk = "3.41.0"
ddtrace = "3.13.0"                                          #pin to avoid yanked version 3.12.4
posthog = "7.9.12"
limits = "5.8.0"
coredis = "4.24.0"
httpx = "0.28.1"
scikit-learn = "1.8.0"
shap = "0.48.0"
google-cloud-recaptcha-enterprise = "1.31.0"
# Dependencies previously only in Dockerfile, now managed via poetry.lock
prometheus-client = "0.24.1"
pandas = "2.3.3"
numpy = "2.4.4"
mcp = "1.27.0"
pillow = "12.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.3"
mypy = "1.13.0"
pre-commit = "4.1.0"
build = "1.4.2"
types-requests = "2.33.0.20260402"

[tool.poetry.group.test.dependencies]
pytest = "9.0.3"
pytest-cov = "7.1.0"
pytest-asyncio = "1.3.0"
pytest-forked = "1.6.0"
pytest-xdist = "3.8.0"
flake8 = "7.3.0"
freezegun = "1.5.5"
openai = "2.33.0"
opencv-python = "4.13.0.92"
pandas = "2.3.3"
reportlab = "4.4.10"
gevent = "25.9.1"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff]
lint.select = [ "D" ]
# ignore warnings for missing docstrings
lint.ignore = [ "D1" ]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
relative_files = true
omit = [ "tests/*" ]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { openhands-agent-server = false, openhands-sdk = false, openhands-tools = false }
